--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Career Culture</string>
+    <string name="app_name">Career And Culture</string>
+
     
     <!-- this is important for login with facebook -->
 
